syntax="proto3";

option go_package = "/pb";
option java_package = "com.services";

// service LoginService {
//     rpc Login(LoginRequest) returns (LoginResponse) {}
// }

message LoginRequest {
    string phoneNumber = 1;
    string password=2;
    bool use_password=3;
    optional string countryCode=4;

}
message LoginResponse {
    string message = 1;
    optional   string error = 2;
}
